syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;
import "google/protobuf/timestamp.proto";

service PixRegistraChaveGrpcService {

  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}

}

service PixRemoveChaveGrpcService {

  rpc remove(RemoveChavePixRequest) returns(RemoveChavePixResponse) {}

}

service PixConsultaChaveGrpcService {

  rpc pesquisa(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}

}

service PixListaChavesPorClienteGrpcService {

  rpc lista(ListaChavePixRequest) returns ( ListaChavePixResponse) {}

}

message ListaChavePixResponse {
  message Chave {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  repeated Chave chaves = 1;
  string clienteId = 2;
}

message ListaChavePixRequest {
  string clienteId = 1;
}



message ConsultaChavePixRequest {

  message FiltroPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro {
    FiltroPixId pixId = 1;
    string chave = 2;
  }

}

message ConsultaChavePixResponse {

  message ChavePix {

    message InfoConta {
      TipoConta tipoConta = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numero = 6;
    }

    TipoChave tipoChave = 1;
    string chave = 2;
    InfoConta conta = 3;
    google.protobuf.Timestamp criadaEm = 4;

  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;

}


// Remove chave
message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

// Registra chave

enum TipoConta {
  DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}